package headfirst.designpatterns.strategy.duck;

public interface FlyBehavior {
  void fly();
}
