package headfirst.designpatterns.strategy.duck;

public class Quack implements QuackBehavior {
  public void quack() {
    System.out.println("quack quack quack");
  }
}
