package headfirst.designpatterns.strategy.duck;

public interface QuackBehavior {
  void quack();
}
